--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-three/rapier": "^1.5.0",
     "@tailwindcss/vite": "^4.1.10",
     "axios": "^1.10.0",
+    "fast-deep-equal": "^3.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "three": "^0.179.1"
