--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "fast-deep-equal": "^3.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "three": "^0.179.1"
+    "three": "^0.179.1",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
